<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PassGenerator</string>
     
    <string name="settings_title">PassGenerator Settings</string> 
    <string name="settings">Settings</string>  
    <string name="password_settings">Password settings</string>
    <string name="option_length">Length</string>
    <string name="option_letters">Letters</string>
    <string name="option_capital_letters">Capital letters</string>
    <string name="option_numbers">Numbers</string>
    <string name="option_symbols">Symbols</string>
    <string name="option_length_not_valid">You must enter a number between #OPTION_LENGTH_MIN# and #OPTION_LENGTH_MAX#</string>
    <string name="clipboard_settings">Clipboard settings</string>
    <string name="option_clipboard">Enable clipboard</string>
    <string name="option_clipboard_summary">Enables copy password to clipboard</string>
    
    <string name="generate">Generate</string>
    <string name="share">Share</string>
    <string name="no_options">Can\'t generate password (no values)</string>
    <string name="clipboard_copy">Copy to clipboard</string>
    <string name="clipboard_empty">There\'s no password to copy</string>
    <string name="clipboard_copied">Password copied</string>
       
    <string name="about">About</string>
    <string name="about_title">About PassGenerator</string>
    <string name="about_text">Passgenerator is a password generation tool. With this you can generate a password and send it to android clipboard.
        \n\nWritten by flash_zero</string>
</resources>
